Fix invisible font on macOS

--- a/azul-native-style/src/styles/native_macos.css
+++ b/azul-native-style/src/styles/native_macos.css
@@ -1,6 +1,6 @@
 * {
     font-size: 12px;
-    font-family: sans-serif;
+    font-family: Helvetica;
     color: #4c4c4c;
 }
 
